--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
 
   <div class="content">
+
+    <!-- MAVBAR DU HAUT -->
+
     <div id="navbar">
       <ul>
         <li><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/59615/icon--profile.png" id="profil-pic"></li>
@@ -22,6 +25,8 @@
 
       </ul>
     </div>
+
+    <!-- CONTAINER DU MILIEU -->
 
     <div id="searchcontainer">
       <img class="logo" src="https://u.cubeupload.com/Sono/logo.png">
@@ -38,6 +43,8 @@
     </div>
 
   </div>
+
+  <!-- PIED DE PAGE -->
 
   <footer class="footer">
     <p class="langage">France</p>
